cleanup and small fix on mobile

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -25,6 +25,10 @@ body {
   }
 }
 
+main {
+  overflow-x: hidden;
+}
+
 @for $i from 1 through 6 {
   h#{$i} {
     font-weight: 700;
